[gd_scene load_steps=8 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Character/Enemy/Main_Boss.gd" type="Script" id=2]
[ext_resource path="res://object/Bullets_xz/Boss_bullet_1.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/Character spriites/Enemy/boss.png" type="Texture" id=4]
[ext_resource path="res://object/Bullets_xz/Boss_bullet_2.tscn" type="PackedScene" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 56.0587
height = 77.7857

[sub_resource type="CircleShape2D" id=2]
radius = 2867.12

[node name="Main_Boss" type="KinematicBody2D"]
position = Vector2( 388.906, 203.05 )
script = ExtResource( 2 )
FireBall_1 = ExtResource( 3 )
Fireball_2 = ExtResource( 5 )
FireBall_2 = ExtResource( 5 )
health = 900.0

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.88296, 0.88296 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.08072, 31.3407 )
shape = SubResource( 1 )

[node name="Position2D Collection" type="Node2D" parent="."]

[node name="Firing_1 timer" type="Timer" parent="Position2D Collection"]
wait_time = 0.3

[node name="Firing_2 timer" type="Timer" parent="Position2D Collection"]

[node name="Node2D" type="Node2D" parent="."]

[node name="Turrent_1" type="Sprite" parent="Node2D"]
visible = false
position = Vector2( 0, 31.5019 )
scale = Vector2( 1, 3.18493 )
texture = ExtResource( 1 )

[node name="Position2D_1" type="Position2D" parent="Node2D/Turrent_1"]
position = Vector2( 0, -33 )

[node name="Turrent_3" type="Sprite" parent="Node2D"]
visible = false
position = Vector2( 0, 31.5181 )
scale = Vector2( 1, 3.04755 )
texture = ExtResource( 1 )

[node name="Position2D_2" type="Position2D" parent="Node2D/Turrent_3"]
position = Vector2( 0, 33 )

[node name="Turrent_2" type="Sprite" parent="Node2D"]
visible = false
position = Vector2( 1.82858, 28.4398 )
scale = Vector2( 3.24857, 1 )
texture = ExtResource( 1 )

[node name="Position2D_1" type="Position2D" parent="Node2D/Turrent_2"]
position = Vector2( 33, 0 )

[node name="Turrent_4" type="Sprite" parent="Node2D"]
visible = false
position = Vector2( 4.14996, 25.2098 )
scale = Vector2( 3.24555, 1 )
texture = ExtResource( 1 )

[node name="Position2D_1" type="Position2D" parent="Node2D/Turrent_4"]
position = Vector2( -33, 0 )

[node name="Turrent_5" type="Sprite" parent="Node2D"]
visible = false
modulate = Color( 0.466667, 0.180392, 0.180392, 1 )
rotation = -0.0347766
scale = Vector2( 1.7543, 1.07951 )
texture = ExtResource( 1 )
centered = false

[node name="Position2D" type="Position2D" parent="Node2D/Turrent_5"]
position = Vector2( 65, 30 )

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )
[connection signal="timeout" from="Position2D Collection/Firing_1 timer" to="." method="_on_Firing_1_timer_timeout"]
[connection signal="timeout" from="Position2D Collection/Firing_2 timer" to="." method="_on_Firing_2_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
